Fix spacing, size and distortion for map.html image zoom

--- a/styles/style.css
+++ b/styles/style.css
@@ -647,11 +647,11 @@ body{
 .img-zoom-result {
     border: 1px solid #d4d4d4;
     /*set the size of the result div:*/
-    width: 900px;
+    width: 90vw;
     justify-content: center;
     margin-top: 10%;
-    margin-left: 40px;
-    height: 500px;
+    margin-left: 5vw;
+    height: 40vh;
     box-sizing: border-box;
 }
 
